部署中间件/k8s/【2020最新k8s-荀彧】/k8s/k8s-tuling/hello.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello
  # 指定 label，便于检索
  labels:
    app: hello
spec:
  containers:
  - name: hello
    # 指定镜像
    image: linuxcloud/springboot-docker:v1.0
    # 指定暴露端口
    ports:
    - containerPort: 80
