部署中间件/k8s/【2020最新k8s-荀彧】/k8s/k8s-tuling/nginx-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-demo
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.18.0
        ports:
        - containerPort: 80
