部署中间件/k8s/【2020最新k8s-荀彧】/k8s/k8s-tuling/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  # 指定 label，便于检索
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    # 指定镜像
    image: nginx:1.7.9
    # 指定暴露端口
    ports:
    - containerPort: 80
