部署中间件/k8s/【2020最新k8s-荀彧】/k8s/k8s-tuling/volume-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-demo-pod
spec:
  containers:
  - image: alpine
    imagePullPolicy: IfNotPresent
    name: volumn-demo-container
    
    command: [    'sh', '-c', 'echo The Bench Container 1 is Running ; sleep 3600']
    
    volumeMounts:
    - mountPath: /demo
      name: demo-volume
  volumes:
  - name: demo-volume
    emptyDir: {}
