部署中间件/k8s/【2020最新k8s-荀彧】/k8s/k8s-tuling/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8080
