部署中间件/k8s/【2020最新k8s-荀彧】/k8s/k8s-tuling/ingress-demo.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: 8080
      - path: /hs
        backend:
          serviceName: hello-service
          servicePort: 8989
